fix: footer aligning

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -321,6 +321,8 @@ main.main {
   column-gap: 15px;
   flex-wrap: wrap;
   row-gap: 15px;
+  align-items: center;
+  margin-bottom: 0;
 }
 
 button,
